// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BreadCrumb > Snapshot > should match snapshot with all props 1`] = `
<div>
  <nav
    aria-label="Breadcrumb"
  >
    <ul
      class="_bread_crumbs_wrapper_6647d9 _rtl_6647d9"
      tabindex="0"
    >
      <li
        class="_bread_crumb_6647d9"
      >
        <span
          class="_bread_crumb_node_6647d9 _bread_crumb_node_lg_6647d9"
        >
          <a
            class="_link_dd7717 _sm_dd7717"
            tabindex="0"
          >
            <span
              class="_text_dd7717"
            >
              Home
            </span>
          </a>
        </span>
        <span
          aria-hidden="true"
          class="_bread_crumb_icon_6647d9 _rtl_icon_6647d9 _bread_crumb_icon_lg_6647d9"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 12h14M12 5l7 7-7 7"
            />
          </svg>
        </span>
      </li>
      <li
        class="_bread_crumb_6647d9"
      >
        <span
          class="_bread_crumb_node_6647d9 _bread_crumb_node_lg_6647d9 _selected_6647d9"
        >
          <a
            class="_link_dd7717 _sm_dd7717"
            tabindex="0"
          >
            <span
              class="_text_dd7717"
            >
              Products
            </span>
          </a>
        </span>
        <span
          aria-hidden="true"
          class="_bread_crumb_icon_6647d9 _rtl_icon_6647d9 _bread_crumb_icon_lg_6647d9"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 12h14M12 5l7 7-7 7"
            />
          </svg>
        </span>
      </li>
      <li
        aria-current="page"
        class="_bread_crumb_6647d9"
      >
        <span
          class="_bread_crumb_node_6647d9 _bread_crumb_node_lg_6647d9"
        >
          <a
            class="_link_dd7717 _sm_dd7717"
            tabindex="0"
          >
            <span
              class="_text_dd7717"
            >
              Electronics
            </span>
          </a>
        </span>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`BreadCrumb > Snapshot > should match snapshot with default props 1`] = `
<div>
  <nav
    aria-label="Breadcrumb"
  >
    <ul
      class="_bread_crumbs_wrapper_6647d9"
      tabindex="0"
    >
      <li
        class="_bread_crumb_6647d9"
      >
        <span
          class="_bread_crumb_node_6647d9 _bread_crumb_node_sm_6647d9 _selected_6647d9"
        >
          <a
            class="_link_dd7717 _sm_dd7717"
            tabindex="0"
          >
            <span
              class="_text_dd7717"
            >
              Home
            </span>
          </a>
        </span>
        <span
          aria-hidden="true"
          class="_bread_crumb_icon_6647d9 _bread_crumb_icon_sm_6647d9"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 18l6-6-6-6"
            />
          </svg>
        </span>
      </li>
      <li
        class="_bread_crumb_6647d9"
      >
        <span
          class="_bread_crumb_node_6647d9 _bread_crumb_node_sm_6647d9"
        >
          <a
            class="_link_dd7717 _sm_dd7717"
            tabindex="0"
          >
            <span
              class="_text_dd7717"
            >
              Products
            </span>
          </a>
        </span>
        <span
          aria-hidden="true"
          class="_bread_crumb_icon_6647d9 _bread_crumb_icon_sm_6647d9"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 18l6-6-6-6"
            />
          </svg>
        </span>
      </li>
      <li
        aria-current="page"
        class="_bread_crumb_6647d9"
      >
        <span
          class="_bread_crumb_node_6647d9 _bread_crumb_node_sm_6647d9"
        >
          <a
            class="_link_dd7717 _sm_dd7717"
            tabindex="0"
          >
            <span
              class="_text_dd7717"
            >
              Electronics
            </span>
          </a>
        </span>
      </li>
    </ul>
  </nav>
</div>
`;
